# tutorial-diffusion-frameworks

./: .gitignore  LICENSE  README.md  docker-compose.yml
.devcontainer/tutorial_cpu/: devcontainer.json
.devcontainer/tutorial_gpu/: devcontainer.json
docker/: Dockerfile  pyproject.toml
notebooks/: make_lorenz96_data.ipynb  perform_conditional_generation.ipynb  perform_score_based_da.ipynb  run_on_your_google_colab.ipynb  start_in_your_google_colab.ipynb  train_and_test_ddpm.ipynb  train_ddpm.ipynb  understand_ddpm.ipynb  understand_sde_and_ddpm.ipynb
src/configs/: base_config.py  lorenz96_config.py
src/datasets/: dataset_lorenz96.py
src/dynamics/: lorenz96.py
src/frameworks/: ddpm.py  sda.py
src/neural_networks/: base_network.py  unet_1d.py
src/neural_networks/blocks/: normalization.py  other_conv.py  periodic_conv.py  residual_blocks.py  time_embed.py
src/training/: average_meter.py  loss_maker.py  optim_helper.py
src/utils/: io_pickle.py  psd.py  random_seed_helper.py
