[tool.poetry]
name = "trainable-closures"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^2.2.4"
torch = {version = "2.5.1", source = "torch_cu121"}
scipy = "^1.15.2"
scikit-learn = "^1.6.1"
pandas = "^2.2.3"
tqdm = "^4.67.1"
xarray = "^2025.3.1"
pyyaml = "^6.0.2"
tabulate = "^0.9.0"
boto3 = "^1.37.29"
h5netcdf = "^1.6.1"
netcdf4 = "^1.7.2"
onnx = "^1.17.0"
onnxscript = "^0.2.3"
einops = "^0.8.1"


[[tool.poetry.source]]
name = "torch_cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
plotly = "^6.0.1"
ipython = "^9.1.0"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"